# Trojan-simple

./: Cargo.toml  README.md  cert.pem  cert2.pem  cert_req_config.ini  key.pem  key2.pem
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
