[package]
name = "test_rustls"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_rustls"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-rustls = "0.2.0"
clap = "3.2.22"
env_logger = "0.9.1"
httparse = "1.8.0"
log = "0.4.17"
# rustls = "0.20.6"
rustls-pemfile = "1.0.1"
smol = "1.2.5"

[dev-dependencies]
rcgen = "0.10.0"

